apagnang